--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,160 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Cool Project</title>
+    <title>RWD Timeline</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <aside class="line">
+        
+      </aside>
+          <ul>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f">18:30</h2>
+              </div>
+                <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+                <div class="content">
+                  <div class="arrow"></div>
+                  <div class="heading">
+                    <h6>Ricebean black-eyed pea</h6>
+                    <hr> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                  </p>
+                  </div>
+              </div>
+            </li>
+            <li>
+              <div class="first">
+                <h6 class='date'> 4/3/13</h6>
+                <h2 class="f1">12:04</h2>
+              </div>
+              <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+              <div class="content1">
+                <div class="arrow"></div>
+                 <div class="heading">
+                  <h6>Green radish arugula</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f">05:36</h2>
+              </div>
+              <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+              <div class="content">
+                <div class="arrow"></div>
+                <div class="heading">
+                  <h6>Sprout garlic kohlrabi</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f1">13:15</h2>
+              </div>
+              <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+              <div class="content1">
+                <div class="arrow"></div>
+                 <div class="heading">
+                  <h6>Watercress ricebean</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f">21:30</h2>
+              </div>
+              <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+              <div class="content">
+                <div class="arrow"></div>
+                 <div class="heading">
+                  <h6>Courette daikon</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                </p>
+                </div>
+              </div>
+              
+            </li>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f1">12:11</h2>
+              </div>
+              <div class="line-icon">
+                  <div class="round"><i class="fa fa-gg-circle fa-2x" aria-hidden="true"></i></div>
+                </div>
+              <div class="content1">
+                <div class="arrow"></div>
+                  <div class="heading">
+                  <h6>Greens radish arugula</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="first">
+                <h6 class="date"> 4/3/13</h6>
+                <h2 class="f">09:56</h2>
+              </div>
+
+              <div class="line-icon">
+                <div class="round"><i class="fa fa-gg-circle fa-2x"  aria-hidden="true"></i></div>
+              </div>
+              <div class="content">
+                  <div class="arrow"></div>
+                  <div class="heading">
+                  <h6>Sprout garlic kohlrabi</h6>
+                  <hr> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
     </div>
     <script src="js/bundle.js"></script>
   </body>
